<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@android:color/white"
        android:elevation="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        tools:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:clipToPadding="false"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="@dimen/width_layout"
        android:padding="@dimen/margin_default"
        tools:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/email_field_and_message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:id="@+id/login_with_password_email_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                tools:text="@string/login_with_password_message"
                android:layout_marginVertical="15dp"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default_quarter"
                android:layout_marginEnd="@dimen/margin_default_quarter"
                android:layout_marginStart="@dimen/margin_default_quarter"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_width="match_parent"
                android:hint="@string/simperium_hint_email"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_below="@id/email_field_and_message_container"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_quarter"
            android:layout_marginEnd="@dimen/margin_default_quarter"
            android:layout_marginStart="@dimen/margin_default_quarter"
            android:layout_marginTop="@dimen/margin_default_quarter"
            android:layout_width="match_parent"
            android:hint="@string/simperium_hint_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:backgroundTint="@color/button_primary_disabled_selector"
            android:layout_below="@id/input_password"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_quarter"
            android:layout_marginTop="@dimen/margin_default_quarter"
            android:layout_width="match_parent"
            android:minHeight="@dimen/height_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            tools:text="@string/simperium_button_login"
            style="@style/Widget.AppCompat.Button">
        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/text_footer"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_below="@id/button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="@dimen/height_footer"
            android:padding="@dimen/margin_default_quarter"
            android:textColor="@color/text_footer"
            android:textSize="@dimen/text_footer"
            tools:text="@string/simperium_footer_login">
        </TextView>

    </RelativeLayout>

</RelativeLayout>
