...
    <string name="notes_trashed">Notes trashed.</string>

    <!-- welcome note for new users -->
    <string name="welcome_note">Welcome to Simplenote Android!\nOpen this note for instructions.\n\nTo create a new note, tap the \"New Note\" button with the plus icon.\n\nTo search your notes, tap the \"Search\" button with the magnifying glass icon and enter any text. Simplenote will show you recent searches initially and suggested searches while entering text. Notes matching the entered text w
    <string name="confirm_delete_tag">Are you sure you want to delete this tag?</string>
    <string name="new_note_list">New note&#8230;</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Sorting Options -->
    <string name="sort_by">Sort by</string>
    <string name="sort_newest_modified">Modified: Newest</string>
    <string name="sort_oldest_modified">Modified: Oldest</string>
...
    <string name="key_single_i" translatable="false">I</string>
    <string name="key_single_l" translatable="false">L</string>
    <string name="key_single_p" translatable="false">P</string>
    <string name="key_single_s" translatable="false">S</string>

    <!-- SIMPERIUM -->
    <string name="simperium_button_login">Log In</string>
    <string name="simperium_button_login_email">Log In with Email</string>
    <string name="simperium_button_login_other">Log In with WordPress.com</string>
    <string name="simperium_button_login_reset">Reset</string>
    <string name="simperium_button_signup">Sign Up</string>
    <string name="simperium_dialog_button_copy_url">Copy URL</string>
    <string name="simperium_dialog_button_reset_url">https://app.simplenote.com/reset/?redirect=simplenote://launch&amp;email=%1$s</string>
    <string name="simperium_dialog_message_login">Could not log in with the provided email address and password.</string>
    <string name="simperium_dialog_message_login_reset">Your password is insecure and must be reset.  The password requirements are:\n\n- Password cannot match email\n- Minimum of %1$d characters\n- No new lines\n- No tabs</string>
    <string name="simperium_dialog_message_network">There is no network available.  Please, connect to a network and try again.</string>
    <string name="simperium_dialog_message_password">The password requirements are:\n\n- Password cannot match email\n- Minimum of %1$d characters\n- No new lines\n- No returns\n- No tabs</string>
...
