...
        android:background="?attr/drawerBackgroundColor"
        android:elevation="@dimen/navigation_elevation"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/drawerBackgroundColor"
            app:elevation="0dp"
            app:insetForeground="@android:color/transparent"
            app:itemShapeFillColor="?attr/drawerBackgroundSelector"
...
