...
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow>

                <Button
                    android:id="@+id/button1"
                    android:text="@string/passcodelock_numpad_1"
                    style="@style/PasscodeKeyboardButtonStyle">
                </Button>

                <Button
                    android:id="@+id/button2"
...
